gh pages preparation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-eshop",
+  "homepage": "https://shmelrad.github.io/my-eshop/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist       "
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -16,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
